--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "FCC Tic Tac Toe",
   "main": "index.js",
   "scripts": {
+    "dev": "webpack",
+    "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "www.daveyx.ga",
