--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "scripts": {
     "dev": "webpack",
     "start": "webpack-dev-server --host 0.0.0.0",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src",
+    "lint-fix": "eslint src --fix"
   },
   "author": "www.daveyx.ga",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-react": "^7.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "webpack": "^2.3.3",
